// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`generateStreamObjectHook > snapshot — default output 1`] = `
"// Generated by ai-wingman — edit freely, you own this file.

'use client'

import { experimental_useObject as useObject } from '@ai-sdk/react'
import { outputSchema } from '@/lib/schemas/output.schema'

export function useOutputStream() {
  const { object, isLoading, error, submit: submitObject } = useObject({
    api: '/api/stream-object',
    schema: outputSchema,
  })

  function submit(prompt: string) {
    submitObject({ prompt })
  }

  return { object, isLoading, error, submit } satisfies {
    object: import('ai').DeepPartial<import('zod').infer<typeof outputSchema>> | undefined
    isLoading: boolean
    error: Error | undefined
    submit: (prompt: string) => void
  }
}
"
`;

exports[`generateStreamObjectHook > snapshot — product 1`] = `
"// Generated by ai-wingman — edit freely, you own this file.

'use client'

import { experimental_useObject as useObject } from '@ai-sdk/react'
import { productSchema } from '@/lib/schemas/output.schema'

export function useProductStream() {
  const { object, isLoading, error, submit: submitObject } = useObject({
    api: '/api/stream-object',
    schema: productSchema,
  })

  function submit(prompt: string) {
    submitObject({ prompt })
  }

  return { object, isLoading, error, submit } satisfies {
    object: import('ai').DeepPartial<import('zod').infer<typeof productSchema>> | undefined
    isLoading: boolean
    error: Error | undefined
    submit: (prompt: string) => void
  }
}
"
`;

exports[`generateStreamObjectRoute > includes auth guard when auth is true 1`] = `
"// Generated by ai-wingman — edit freely, you own this file.

import { streamObject } from 'ai'
import { anthropic } from '@ai-sdk/anthropic'
import { outputSchema } from '@/lib/schemas/output.schema'
import { auth } from '@/auth'

export async function POST(req: Request) {
  const session = await auth()
  if (!session) return new Response('Unauthorized', { status: 401 })

  const { prompt } = await req.json()

  const result = streamObject({
    model: anthropic("claude-opus-4-5"),
    schema: outputSchema,
    prompt,
  })

  return result.toTextStreamResponse()
}
"
`;

exports[`generateStreamObjectRoute > snapshot — default output 1`] = `
"// Generated by ai-wingman — edit freely, you own this file.

import { streamObject } from 'ai'
import { anthropic } from '@ai-sdk/anthropic'
import { outputSchema } from '@/lib/schemas/output.schema'

export async function POST(req: Request) {
  // TODO: bring your own auth
  // Add session validation here before processing messages. Example with NextAuth:
  //   import { auth } from '@/auth'
  //   const session = await auth()
  //   if (!session) return new Response('Unauthorized', { status: 401 })

  const { prompt } = await req.json()

  const result = streamObject({
    model: anthropic("claude-opus-4-5"),
    schema: outputSchema,
    prompt,
  })

  return result.toTextStreamResponse()
}
"
`;
